--- a/quiz/client/src/sass/elements/container.scss
+++ b/quiz/client/src/sass/elements/container.scss
@@ -27,3 +27,9 @@
 .container > .title-h2 {
     margin-bottom: 40px;
 }
+
+.container-wrapper {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
