--- a/quiz/client/src/sass/base/variables.scss
+++ b/quiz/client/src/sass/base/variables.scss
@@ -10,6 +10,7 @@
     --color-disabled: #4d4d4d;
     --color-white-translucent: rgba(230, 230, 230, 0.8);
     --color-black-translucent: rgba(0, 0, 0, 0.8);
+    --color-black-more-translucent: rgba(0, 0, 0, 0.2);
 
     /* gradients */
     --gradient-blue-purple: linear-gradient(180deg, var(--color-dark-blue) 0%, var(--color-dark-purple) 100%);
