border radius for list and container

--- a/quiz/client/src/sass/elements/container.scss
+++ b/quiz/client/src/sass/elements/container.scss
@@ -14,7 +14,7 @@
 }
 .container.container-translucent {
     border: none;
-    border-radius: 0;
+    border-radius: var(--border-radius-medium);
     background: var(--color-black-translucent);
 }
 
