--- a/quiz/client/src/sass/elements/list.scss
+++ b/quiz/client/src/sass/elements/list.scss
@@ -32,6 +32,7 @@
 
 .list-row-entry {
     background: var(--color-black-translucent);
+    border-radius: var(--border-radius-medium);
     &.setting-row-entry {
         display: flex;
         align-items: center;
