--- a/quiz/client/src/sass/index.scss
+++ b/quiz/client/src/sass/index.scss
@@ -17,6 +17,7 @@
 @use "./elements/dialog.scss";
 @use "./elements/mascot.scss";
 @use "./elements/list.scss";
+@use "./elements/settings-overlay.scss";
 
 /** screens */
 @use "./screens/screen.scss";
