--- a/quiz/client/serve/style.css
+++ b/quiz/client/serve/style.css
@@ -880,7 +880,10 @@ input[type=checkbox]:disabled {
   border-radius: var(--border-radius-medium);
   margin: 12px 0 24px;
   height: 300px;
-  /* background: var(--color-black); */
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23e6e6e6'%3E%3Cpath d='M21,3V15.5A3.5,3.5 0 0,1 17.5,19A3.5,3.5 0 0,1 14,15.5A3.5,3.5 0 0,1 17.5,12C18.04,12 18.55,12.12 19,12.34V6.47L9,8.6V17.5A3.5,3.5 0 0,1 5.5,21A3.5,3.5 0 0,1 2,17.5A3.5,3.5 0 0,1 5.5,14C6.04,14 6.55,14.12 7,14.34V6L21,3Z' /%3E%3C/svg%3E");
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .question-image {
@@ -944,6 +947,7 @@ input[type=checkbox]:disabled {
   cursor: pointer;
   padding: 32px;
   border: var(--border-width-medium) solid var(--color-white-translucent);
+  max-height: 128px;
 }
 
 .answers > li[data-answer-selected=true] {
