--- a/quiz/client/serve/style.css
+++ b/quiz/client/serve/style.css
@@ -109,6 +109,7 @@ body {
   padding: 0;
   overflow: hidden;
   user-select: none;
+  height: 100%;
 }
 
 * {
@@ -166,6 +167,10 @@ dt:first-child {
   background: var(--color-black-translucent);
 }
 
+.text-center {
+  text-align: center;
+}
+
 .title-h1 {
   font-size: var(--h1-font-size);
   font-weight: 600;
@@ -202,6 +207,11 @@ dt:first-child {
 
 .button:hover {
   box-shadow: var(--hover-dark);
+}
+
+.button.button-small {
+  font-weight: 700;
+  font-size: var(--small-font-size);
 }
 
 .button.button-outline {
@@ -411,6 +421,16 @@ input[type=checkbox]:disabled {
   margin: auto;
 }
 
+.vertical-container-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  margin: auto;
+  gap: 32px;
+}
+
 .multiple-container-wrapper {
   display: flex;
   justify-content: center;
@@ -575,6 +595,15 @@ input[type=checkbox]:disabled {
   margin-left: -32px;
 }
 
+.stacked-form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.stacked-form > input[type=submit] {
+  margin-top: 8px;
+}
+
 .dialog-actions {
   display: flex;
   justify-content: center;
@@ -586,40 +615,6 @@ input[type=checkbox]:disabled {
   display: flex;
 }
 
-.mascot-overlay {
-  position: absolute;
-  display: flex;
-  z-index: 1;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  pointer-events: none;
-}
-
-.mascot {
-  background: url("/imgs/mascot.png");
-  background-size: contain;
-  width: 40vh;
-  height: 40vh;
-  margin: auto;
-  transform: translateY(100%);
-  animation: mascot-slide 2s 0.3s ease forwards;
-}
-
-@keyframes mascot-slide {
-  0% {
-    transform: translateY(100%);
-  }
-  30% {
-    transform: translateY(0);
-  }
-  70% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(100%);
-  }
-}
 .list {
   list-style: none;
   list-style-type: none;
@@ -737,7 +732,7 @@ input[type=checkbox]:disabled {
 
 .screen-container {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
   position: relative;
   z-index: 0;
@@ -750,7 +745,7 @@ input[type=checkbox]:disabled {
   display: grid;
   grid-template-rows: 1fr auto 1fr;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   overflow: auto;
   will-change: transform;
   padding: 30px;
@@ -765,6 +760,9 @@ input[type=checkbox]:disabled {
   display: flex;
   justify-content: center;
   gap: 16px;
+}
+.screen > .bottom-container.align-right {
+  justify-content: flex-end;
 }
 
 .screen[data-screen-active=cur] {
@@ -860,6 +858,14 @@ input[type=checkbox]:disabled {
 }
 .screen.gradient-bg-screen {
   background: var(--gradient-blue-purple);
+}
+
+.login-logo {
+  height: 324px;
+  margin-bottom: 96px;
+}
+.login-logo > img {
+  height: 100%;
 }
 
 .question-wrapper {
