--- a/quiz/client/src/sass/elements/container.scss
+++ b/quiz/client/src/sass/elements/container.scss
@@ -35,3 +35,13 @@
     max-width: 1000px;
     margin: auto;
 }
+
+.vertical-container-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    margin: auto;
+    gap: 32px;
+}
