--- a/quiz/client/src/sass/index.scss
+++ b/quiz/client/src/sass/index.scss
@@ -1,6 +1,7 @@
 @use "./fonts/fonts.scss";
 @use "./base/variables.scss";
 @use "./base/reset.scss";
+@use "./base/helper.scss";
 @use "./base/text.scss";
 
 /** elements */
@@ -15,12 +16,12 @@
 @use "./elements/playerlist.scss";
 @use "./elements/forms.scss";
 @use "./elements/dialog.scss";
-@use "./elements/mascot.scss";
 @use "./elements/list.scss";
 @use "./elements/settings-overlay.scss";
 
 /** screens */
 @use "./screens/screen.scss";
+@use "./screens/login.scss";
 @use "./screens/question.scss";
 @use "./screens/lobby.scss";
 
