--- a/quiz/client/src/sass/screens/screen.scss
+++ b/quiz/client/src/sass/screens/screen.scss
@@ -1,6 +1,6 @@
 .screen-container {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     overflow: hidden;
     position: relative;
     z-index: 0;
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-rows: 1fr auto 1fr;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     overflow: auto;
     will-change: transform;
     padding: 30px;
@@ -26,6 +26,10 @@
     display: flex;
     justify-content: center;
     gap: 16px;
+
+    &.align-right {
+        justify-content: flex-end;
+    }
 }
 
 .screen[data-screen-active="cur"] {
