--- a/quiz/client/serve/style.css
+++ b/quiz/client/serve/style.css
@@ -431,6 +431,21 @@ input[type=checkbox]:disabled {
   gap: 32px;
 }
 
+.grid-container-wrapper {
+  display: grid;
+  gap: 24px;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-auto-rows: 1fr;
+  justify-content: center;
+  max-width: 1000px;
+  margin: auto;
+}
+.grid-container-wrapper > .container {
+  max-width: none;
+  width: 100%;
+  height: 100%;
+}
+
 .multiple-container-wrapper {
   display: flex;
   justify-content: center;
@@ -1037,6 +1052,19 @@ input[type=checkbox]:disabled {
 }
 .list.lobby-playerlist .player-name {
   margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+}
+.list.lobby-playerlist .player-icons {
+  display: flex;
+  flex-direction: row;
+  gap: 4px;
+}
+.list.lobby-playerlist .player-icon {
+  width: 24px;
+  height: 24px;
 }
 .list.lobby-playerlist .player-row-more {
   flex: 0 1 64px;
