--- a/quiz/client/src/sass/elements/container.scss
+++ b/quiz/client/src/sass/elements/container.scss
@@ -45,3 +45,19 @@
     margin: auto;
     gap: 32px;
 }
+
+.grid-container-wrapper {
+    display: grid;
+    gap: 24px;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    grid-auto-rows: 1fr;
+    justify-content: center;
+    max-width: 1000px;
+    margin: auto;
+
+    > .container {
+        max-width: none;
+        width: 100%;
+        height: 100%;
+    }
+}
