--- a/quiz/client/src/sass/screens/lobby.scss
+++ b/quiz/client/src/sass/screens/lobby.scss
@@ -32,6 +32,19 @@
     }
     .player-name {
         margin-right: auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 8px;
+    }
+    .player-icons {
+        display: flex;
+        flex-direction: row;
+        gap: 4px;
+    }
+    .player-icon {
+        width: 24px;
+        height: 24px;
     }
     .player-row-more {
         flex: 0 1 64px;
