--- a/quiz/client/src/sass/base/helper.scss
+++ b/quiz/client/src/sass/base/helper.scss
@@ -1,3 +1,19 @@
 .text-center {
     text-align: center;
 }
+
+// little hack to expand clickable zone
+.expand-clickable {
+    position: relative;
+    &:before {
+        content: " ";
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: -8px;
+        border-radius: 100%;
+        background: none;
+    }
+}
