--- a/quiz/client/src/sass/index.scss
+++ b/quiz/client/src/sass/index.scss
@@ -22,6 +22,7 @@
 /** screens */
 @use "./screens/screen.scss";
 @use "./screens/login.scss";
+@use "./screens/join.scss";
 @use "./screens/question.scss";
 @use "./screens/lobby.scss";
 
