--- a/quiz/client/serve/style.css
+++ b/quiz/client/serve/style.css
@@ -424,6 +424,31 @@ input[type=checkbox]:disabled {
   top: 0;
 }
 
+.container.container-image {
+  padding: 0;
+  position: relative;
+  z-index: 0;
+  border: 0;
+}
+.container.container-image:after {
+  position: absolute;
+  content: " ";
+  display: block;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: var(--border-width-large) solid var(--color-white);
+  border-radius: var(--border-radius-large);
+  z-index: 1;
+}
+.container.container-image > img {
+  width: 100%;
+}
+.container.container-image .container-image-content {
+  padding: 36px 48px;
+}
+
 .container > .title-h2 {
   margin-bottom: 40px;
 }
@@ -884,6 +909,20 @@ input[type=checkbox]:disabled {
 }
 .login-logo > img {
   height: 100%;
+}
+
+.join-container {
+  max-width: 400px;
+  cursor: pointer;
+  will-change: transform;
+  transition: transform 0.2s ease;
+}
+.join-container:hover {
+  transform: scale(1.05);
+}
+
+.join-container-description {
+  text-transform: uppercase;
 }
 
 .question-wrapper {
