--- a/quiz/client/src/sass/screens/lobby.scss
+++ b/quiz/client/src/sass/screens/lobby.scss
@@ -28,6 +28,7 @@
     .player-row-entry {
         display: flex;
         justify-content: center;
+        align-items: center;
     }
     .player-row-entry-empty {
         color: var(--color-disabled);
