fixed height for images

--- a/quiz/client/serve/style.css
+++ b/quiz/client/serve/style.css
@@ -420,6 +420,7 @@ input[type=checkbox]:disabled {
   z-index: 1;
 }
 .container.container-image > img {
+  height: 265px;
   width: 100%;
 }
 .container.container-image .container-image-content {
