--- a/quiz/client/serve/style.css
+++ b/quiz/client/serve/style.css
@@ -1007,6 +1007,13 @@ select {
   max-height: 128px;
 }
 
+.answers .secondary-answer {
+  font-size: var(--small-font-size);
+  display: block;
+  margin-top: 2px;
+  opacity: 0.8;
+}
+
 .answers > li[data-answer-selected=true] {
   border: none;
   padding: 36px;
