--- a/quiz/client/src/sass/screens/question.scss
+++ b/quiz/client/src/sass/screens/question.scss
@@ -86,6 +86,13 @@
     max-height: 128px;
 }
 
+.answers .secondary-answer {
+    font-size: var(--small-font-size);
+    display: block;
+    margin-top: 2px;
+    opacity: 0.8;
+}
+
 .answers > li[data-answer-selected="true"] {
     border: none;
     padding: 36px;
