improve lobby overview panel

--- a/quiz/client/src/sass/base/reset.scss
+++ b/quiz/client/src/sass/base/reset.scss
@@ -40,7 +40,8 @@ dl {
 dt {
     text-transform: uppercase;
     font-size: var(--small-font-size);
-    margin-top: 16px;
+    font-weight: 600;
+    margin-top: 12px;
 }
 
 dd {
